--- a/style.css
+++ b/style.css
@@ -1797,11 +1797,14 @@ textarea {
 
 .cart-items {
     margin-top: 40px;
+    max-height: 60vh;
+    overflow: auto;
+   
 }
 
 .cart-items table {
     width: 100%;
-    border-spacing: 0 40px;
+    border-spacing: 0px;
 
 }
 
@@ -1813,12 +1816,14 @@ textarea {
 
 
 .cart-items table thead {
+    position: sticky;
+    top: 0px;
+    z-index: 1;
     border-radius: 4px;
     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
 }
 
 .cart-items table th {
-
     padding: 24px 0;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
@@ -1867,8 +1872,8 @@ tbody tr td {
     gap: 20px;
 }
 
-tbody tr {
 
+tbody tr {
     height: 102px;
     border-radius: 4px;
     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
@@ -1902,11 +1907,15 @@ td input {
     border: 1.5px solid rgba(0, 0, 0, 0.40);
 }
 
+td input:focus{
+    outline: none;
+}
+
 
 .cart-btns-group {
     display: flex;
     justify-content: space-between;
-    margin-top: -16px;
+    margin-top: 16px;
 }
 
 .coupon-cartTotal {
@@ -1962,7 +1971,15 @@ td input {
 .cart-total .checkout-btn{
     text-align: center;
 }
-
+.cart-items{
+    text-align: center;
+}
+.empty-cart-image{
+    width: 60%;
+    height: auto;
+    object-fit: cover;
+    margin-bottom: 60px;
+}
 
 
 @media screen and (max-width: 425px) {
