--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body.no-scroll {
 .btn {
     color: #FAFAFA;
 
+    position: relative;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -28,13 +29,32 @@ body.no-scroll {
     padding: 16px 48px;
     border-radius: 4px;
     border: none;
-    background: #DB4444;
+    background-color: #DB4444;
+    transition: background 0.5s;
+    overflow: hidden;
 }
 
 .btn:hover {
     cursor: pointer;
+    box-shadow: inset 0 5px 40px rgba(0, 0, 0, 0.1);
 }
 
+.ripple {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.6);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transform: scale(0);
+    animation: ripple-animation 0.6s linear;
+}
+
+@keyframes ripple-animation {
+    to {
+        transform: scale(4);
+        opacity: 0;
+    }
+}
 
 
 p {
@@ -310,7 +330,7 @@ header {
     height: 0;
     width: 100vw;
     position: fixed;
-    z-index: 100;
+    z-index: 999;
     top: 0;
     left: 0;
     background-color: rgb(0, 0, 0);
@@ -1799,13 +1819,13 @@ textarea {
     margin-top: 40px;
     max-height: 60vh;
     overflow: auto;
-   
+
 }
 
 .cart-items table {
     width: 100%;
-    border-spacing: 0px;
-
+    border-spacing: 0;
+    
 }
 
 
@@ -1817,7 +1837,7 @@ textarea {
 
 .cart-items table thead {
     position: sticky;
-    top: 0px;
+    top: 0;
     z-index: 1;
     border-radius: 4px;
     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
@@ -1871,13 +1891,17 @@ tbody tr td {
     align-items: center;
     gap: 20px;
 }
-
+tbody{
+   
+    z-index: 0;
+    position: relative;
+}
 
 tbody tr {
     height: 102px;
     border-radius: 4px;
     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
-   
+
 
 }
 
@@ -1907,7 +1931,7 @@ td input {
     border: 1.5px solid rgba(0, 0, 0, 0.40);
 }
 
-td input:focus{
+td input:focus {
     outline: none;
 }
 
@@ -1957,24 +1981,27 @@ td input:focus{
 }
 
 
-.cart-total  h4 {
+.cart-total h4 {
     font-weight: 400;
     display: flex;
     justify-content: space-between;
     padding: 16px 0;
     border-bottom: 0.5px rgb(0, 0, 0, 0.4) solid;
 }
-.total-row{
+
+.total-row {
     border-bottom: none !important;
 }
 
-.cart-total .checkout-btn{
+.cart-total .checkout-btn {
     text-align: center;
 }
-.cart-items{
+
+.cart-items {
     text-align: center;
 }
-.empty-cart-image{
+
+.empty-cart-image {
     width: 60%;
     height: auto;
     object-fit: cover;
@@ -1984,14 +2011,20 @@ td input:focus{
 
 @media screen and (max-width: 425px) {
 
-    .coupon{
+    .cart-items table .price{
+        display: none;
+    }
+
+    .coupon {
         white-space: wrap;
     }
-    .coupon input{
+
+    .coupon input {
         width: 100%;
         box-sizing: border-box;
     }
-    .coupon button{
+
+    .coupon button {
         float: right;
         margin-top: 10px;
     }
@@ -2026,44 +2059,50 @@ td input:focus{
 
 @media screen and (max-width:690px) {
 
-    td tbody, .product-name {
+    .cart-items tbody .product .product-name{
+        flex: 100%;
+    }
+
+    td tbody,
+    .product-name {
         font-size: 14px !important;
     }
 
-    .coupon input{
+    .coupon input {
         padding: 10px;
     }
-    td input{
+
+    td input {
         width: 20px;
     }
 
     .btn {
         padding: 12px;
     }
-   
+
     tbody .product-subtotal {
         padding-right: 20px !important;
     }
 
-    .cart-items .product-subtotal{
+    .cart-items .product-subtotal {
         padding-right: 20px;
     }
 
-    .cart-items .product{
+    .cart-items .product {
         padding-left: 20px;
-        text-align: center;
-        
+
     }
-    .cart-items tbody .product img{
+
+    .cart-items tbody .product img {
         align-self: center;
     }
 
-    .cart-items tbody .product{
+    .cart-items tbody .product {
         flex-wrap: wrap;
         gap: 0px;
     }
 
-   
+
     h6 {
         font-size: 30px;
     }
@@ -2181,9 +2220,10 @@ td input:focus{
 
 @media screen and (max-width: 930px) {
 
-    .coupon{
+    .coupon {
         flex: 100%;
     }
+
     footer {
         margin-top: 60px;
     }
