--- a/style.css
+++ b/style.css
@@ -1838,7 +1838,6 @@ textarea {
 .cart-items table thead {
     position: sticky;
     top: 0;
-    z-index: 1;
     border-radius: 4px;
     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
 }
@@ -1891,14 +1890,10 @@ tbody tr td {
     align-items: center;
     gap: 20px;
 }
-tbody{
-   
-    z-index: 0;
-    position: relative;
-}
+
 
 tbody tr {
-    height: 102px;
+    
     border-radius: 4px;
     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
 
@@ -1906,7 +1901,7 @@ tbody tr {
 }
 
 tbody .product {
-    height: 102px;
+    padding: 24px 0;
 }
 
 tbody .product-name {
@@ -1988,6 +1983,7 @@ td input:focus {
     padding: 16px 0;
     border-bottom: 0.5px rgb(0, 0, 0, 0.4) solid;
 }
+
 
 .total-row {
     border-bottom: none !important;
